adding logo cris

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-mov fixed-top mb-2 pb-2">
     <div class="container-fluid"> 
-   <a href="" id="principal-button"> <img class="navbar-brand cris-logo" src="../assets/Images/Cristina.svg" alt="Icono Cristina">
+   <a href="" id="principal-button"> <img class="navbar-brand cris-logo" src="./assets/Images/Cristina.svg" alt="Icono Cristina">
    </a>
     <button id="prueba" class="navbar-toggler burger-icon" type="button" data-toggle="collapse" data-target="#principal-menu" aria-controls="principal-menu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
