--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
   <div class="row mb-lg-5 pb-lg-5">
   <div class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container" 
   >
-  <img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">
+  <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">
   </div>
   <div class="col-12 d-flex col-lg-4 bio-p-container pb-5 align-items-lg-center">
   <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -437,13 +437,13 @@
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active  w-100">  
-                 <img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">
+                 <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">
                 </div>
                 <div class="carousel-item w-100">      
-                 <img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">   
+                 <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">   
                 </div>
                 <div class="carousel-item w-100">
-                 <img class="img-fluid" src="/assets/Images/rectangle 10.svg" alt="">     
+                 <img class="img-fluid" src="./assets/Images/rectangle 10.svg" alt="">     
               </div>
             </div>
         </div>
@@ -500,13 +500,13 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                   <div class="carousel-item active  w-100">  
-                   <img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">
+                   <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">
                   </div>
                   <div class="carousel-item w-100">      
-                   <img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">   
+                   <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">   
                   </div>
                   <div class="carousel-item w-100">
-                   <img class="img-fluid" src="/assets/Images/rectangle 10.svg" alt="">     
+                   <img class="img-fluid" src="./assets/Images/rectangle 10.svg" alt="">     
                 </div>
               </div>
           </div>
@@ -563,13 +563,13 @@
                   </ol>
                   <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active  w-100">  
-                     <img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">
+                     <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">
                     </div>
                     <div class="carousel-item w-100">      
-                     <img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">   
+                     <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">   
                     </div>
                     <div class="carousel-item w-100">
-                     <img class="img-fluid" src="/assets/Images/rectangle 10.svg" alt="">     
+                     <img class="img-fluid" src="./assets/Images/rectangle 10.svg" alt="">     
                   </div>
                 </div>
             </div>
@@ -626,13 +626,13 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                       <div class="carousel-item active  w-100">  
-                       <img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">
+                       <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">
                       </div>
                       <div class="carousel-item w-100">      
-                       <img class="img-fluid" src="/assets/Images/Rectangle 10.svg" alt="">   
+                       <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">   
                       </div>
                       <div class="carousel-item w-100">
-                       <img class="img-fluid" src="/assets/Images/rectangle 10.svg" alt="">     
+                       <img class="img-fluid" src="./assets/Images/rectangle 10.svg" alt="">     
                     </div>
                   </div>
               </div>
@@ -685,7 +685,7 @@
           <div class="second-card-container">
             <div class="third-card-container">
               <div class="inside-card-container">
-                <img class="img-fluid card-img" src="/assets/Images/Rectangle 54 (1).svg" alt="">
+                <img class="img-fluid card-img" src="./assets/Images/Rectangle 54 (1).svg" alt="">
                 <div class="card-img-overlay"> <p class="card-text card-text-course">Lorem ipsum dolor sit ame</p></div>
               </div>
             </div>
@@ -729,7 +729,7 @@
 
   </section>
   
-  <div class="wa-icon"><img src="../assets/Images/WhatsApp.svg" alt=""></div>
+  <div class="wa-icon"><img src="./assets/Images/WhatsApp.svg" alt=""></div>
   
   <footer class="page-footer footer-style py-3 px-2 px-lg-4">
   <div class="container-fluid">
@@ -737,23 +737,23 @@
     <div class="col-9 justify-content-start pr-0">
       <div class="pb-2">
       <a class="footer-text" href="mailto:informes@cristinajauregui.com" class="" target="_blank" title="E-mail">
-        <img class="img-fluid img-l-footer" src="../assets/Images/email.svg" alt="">informes@cristinajauregui.com</a>
+        <img class="img-fluid img-l-footer" src="./assets/Images/email.svg" alt="">informes@cristinajauregui.com</a>
       </div>
       <div  class="pb-2">
       <a  class="footer-text" href="tel:+525514753238" class="" target="_blank" title="Phone">
-        <img  class="img-fluid img-l-footer" src="../assets/Images/phone.svg" alt=""> <span data-localize="phone">
+        <img  class="img-fluid img-l-footer" src="./assets/Images/phone.svg" alt=""> <span data-localize="phone">
           +52 (55) 1475 3238</span></a>
         </div>
     </div>
     <div class="col-3 pl-0">
       
      <div class=" d-flex justify-content-end">
-        <a  href=""><img class="img-fluid icon-footer" src="../assets/Images/facebook.svg" alt=""></a>
-        <a class="img-rr-footer" href=""><img class="img-fluid icon-footer" src="../assets/Images/instagram.svg" alt=""></a>
+        <a  href=""><img class="img-fluid icon-footer" src="./assets/Images/facebook.svg" alt=""></a>
+        <a class="img-rr-footer" href=""><img class="img-fluid icon-footer" src="./assets/Images/instagram.svg" alt=""></a>
       </div>
       <div class=" d-flex justify-content-end">
-        <a  href=""><img class="img-fluid icon-footer" src="../assets/Images/twitter.svg" alt=""></a>
-        <a class="img-rr-footer" href=""><img class="img-fluid icon-footer" src="../assets/Images/youtube.svg" alt=""></a>
+        <a  href=""><img class="img-fluid icon-footer" src="./assets/Images/twitter.svg" alt=""></a>
+        <a class="img-rr-footer" href=""><img class="img-fluid icon-footer" src="./assets/Images/youtube.svg" alt=""></a>
       </div>
     
     </div>
