adding changes to bio

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a class="nav-link active bt"  data-toggle="" data-target=".navbar-collapse.show" id="courses-button" href="#">Cursos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active bt"  data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Blog</a>
+            <a class="nav-link active bt"  data-toggle="" data-target=".navbar-collapse.show" id="blog-button" href="#">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active bt"  data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Tienda</a>
@@ -387,7 +387,7 @@
   </div>
   <div id="bio-container" class="container">
   <div class="row mb-lg-5 pb-lg-5">
-  <div class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container" 
+  <div class="col-12 col-lg-8 img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container" 
   >
   <img class="img-fluid" src="./assets/Images/Rectangle 10.svg" alt="">
   </div>
@@ -727,6 +727,10 @@
       </div>
     </div>
 
+  </section>
+
+  <section id="blog-section" class="hide">   
+<div><p>Blog</p></div>
   </section>
   
   <div class="wa-icon"><img src="./assets/Images/WhatsApp.svg" alt=""></div>
