adding blog d to the page

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
             <!--<a id="cris-exp" class="nav-link dropdown-toggle d-flex drop-container" href="#" data-toggle="dropdown"
             role="button" aria-haspopup="true" aria-expanded="false" data-target=".navbar-collapse.show">
             Cristina <span class="d-none d-lg-block"><img src="./assets/Images/arrow-down.svg" alt=""></span></a>-->
-            <a class="dropdown-toggle dropdown-toggle-blog d-flex justify-content-around" type="button"
+            <a class="dropdown-toggle dropdown-toggle-blog d-flex justify-content-around" role="button"
               id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               temas<span class="d-none d-lg-block"><img src="./assets/Images/expand_more.svg" alt=""></span>
               <span class="d-block d-lg-none"><img src="./assets/Images/expand_more_mini.svg" alt=""></span>
