adding new content to blog

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               Dropdown button
               <span><img src="/assets/Images/arrow-down.svg" alt=""></span>
             </button>-->
-                <a id="cris-exp" class="nav-link dropdown-toggle d-flex drop-container" href="#" data-toggle="dropdown"
+                <a id="cris-exp" class="nav-link dropdown-toggle d-flex drop-container drop-container-off" href="#" data-toggle="dropdown"
                   role="button" aria-haspopup="true" aria-expanded="false" data-target=".navbar-collapse.show">
                   Cristina <span class="d-none d-lg-block"><img src="./assets/Images/arrow-down.svg" alt=""></span></a>
 
@@ -218,8 +218,11 @@
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active carousel-exp w-100 mb-1">
                 <div class="carousel-wrapper pt-lg-5 mt-lg-5">
-                  <div class="pt-4 pb-2 text-center">
-                    <img src="./assets/Images/Ellipse 4.svg" class="img-fluid" alt="Responsive image" />
+                  <div class="pt-4 pb-2 text-center d-lg-none">
+                    <img src="./assets/Images/laura-test.svg" class="img-fluid" alt="Responsive image" />
+                  </div>
+                  <div class="pt-4 pb-2 text-center d-none d-lg-block">
+                    <img src="./assets/Images/laura-test-2.svg" class="img-fluid" alt="Responsive image" />
                   </div>
                   <div class="text-center carousel-text">
                     <p>
@@ -236,8 +239,11 @@
               </div>
               <div class="carousel-item carousel-exp w-100 mb-1">
                 <div class="carousel-wrapper pt-lg-5 mt-lg-5">
-                  <div class="pt-4 pb-2 text-center">
-                    <img src="./assets/Images/Ellipse 4.svg" class="img-fluid" alt="Responsive image" />
+                  <div class="pt-4 pb-2 text-center d-lg-none">
+                    <img src="./assets/Images/carmen-test.svg" class="img-fluid" alt="Responsive image" />
+                  </div>
+                  <div class="pt-4 pb-2 text-center d-none d-lg-block">
+                    <img src="./assets/Images/carmen-test-2.svg" class="img-fluid" alt="Responsive image" />
                   </div>
                   <div class="text-center carousel-text">
                     <p>
@@ -254,9 +260,13 @@
               </div>
               <div class="carousel-item carousel-exp w-100 mb-1">
                 <div class="carousel-wrapper pt-lg-5 mt-lg-5">
-                  <div class="pt-4 pb-2 text-center">
-                    <img src="./assets/Images/Ellipse 4.svg" class="img-fluid" alt="Responsive image" />
+                  <div class="pt-4 pb-2 text-center d-lg-none">
+                    <img src="./assets/Images/claudia-test.svg" class="img-fluid" alt="Responsive image" />
                   </div>
+                  <div class="pt-4 pb-2 text-center d-none d-lg-block">
+                    <img src="./assets/Images/claudia-test-2.svg" class="img-fluid" alt="Responsive image" />
+                  </div>
+                  
                   <div class="text-center carousel-text">
                     <p>
                       Claudia García
