adding column to cris

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         </div>-->
 
         <div
-          class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container">
+          class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container flex-column-reverse">
 
           <div id="carousel-conf" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators carousel-blog mb-lg-0">
@@ -559,7 +559,7 @@
         </div>-->
 
         <div
-          class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container">
+          class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container flex-column-reverse">
 
           <div id="carousel-tall" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators carousel-blog mb-lg-0">
@@ -623,7 +623,7 @@
         </div>-->
 
         <div
-          class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container">
+          class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container flex-column-reverse">
 
           <div id="carousel-ter" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators carousel-blog mb-lg-0">
@@ -705,7 +705,7 @@
         </div>-->
 
         <div
-          class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container">
+          class="col-12 col-lg-8 d-flex img-fluid justify-content-center justify-content-lg-end pb-5 bio-img-container flex-column-reverse">
 
           <div id="carousel-tv" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators carousel-blog mb-lg-0">
