adding titles to blog

--- a/index.html
+++ b/index.html
@@ -820,7 +820,13 @@
     <div class="container">
       <div class="row">
         <div class="col-6 mt-4 mb-3">
-          <h2>Blog</h2>
+          <h2 id="blog-title">Blog</h2> 
+          <h2 id="bullying-title" class="hide">Bullying</h2>
+          <h2 id="relation-title" class="hide">Relación de pareja</h2>
+          <h2 id="work-title" class="hide">Trabajo</h2>
+          <h2 id="family-title" class="hide">Crianza</h2>
+          <h2 id="happy-title" class="hide">Felicidad</h2>
+          <h2 id="develope-title" class="hide">Desarrollo personal</h2>
         </div>
         <!--<div class="col-2"></div>
       <div class="col-8 d-flex justify-content-end">-->
@@ -835,6 +841,7 @@
               <span class="d-block d-lg-none"><img src="./assets/Images/expand_more_mini.svg" alt=""></span>
             </a>
             <div class="dropdown-menu dropdown-blog" aria-labelledby="dropdownMenu1">
+              <a class="dropdown-item dropdown-item-blog a-blog-button" id="principal-blog-button" href="#!">Recomendados</a>
               <a class="dropdown-item dropdown-item-blog" id="bullying-button" href="#!">Bullying</a>
               <a class="dropdown-item dropdown-item-blog" id="relation-button" href="#!">Relación de pareja</a>
               <a class="dropdown-item dropdown-item-blog" id="work-button" href="#!">Trabajo</a>
