adding articles to blog

--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
     <div class="subtitle-ad">FELICIDAD LABORAL</div>
     <div class="button-ad-container"><a class="btn-primary button-ad" href="">Inscríbete ahora</a></div>
    </div>
-
 <div class="col-4 px-0"><img class="img-fluid" src="./assets/Images/Banner_foto002.svg" alt=""></div>
 </div>-->
     <!--<div class="first-ad align-content-center col-12 col-lg-6 text-center">
@@ -779,7 +778,7 @@
 
           </div>
           <div class="btn-card-container">
-            <a class="btn btn-primary btn-course" href="">COMPRAR CURSOS</a>
+            <a class="btn btn-primary btn-course" href="">COMPRAR CURSO</a>
           </div>
 
         </div>
@@ -796,13 +795,10 @@
                   <div class="align-items-end container-text-card-1">
                     <p class="card-text card-text-course">
                       Lorem ipsum dolor sit ame
-
                     </p>
-
                   </div>
                 </div>
               </div>
-
             </div>
             <div class="justify-self-end" style="
             text-align: center;">
@@ -870,7 +866,7 @@
             </div>
 
             <div class="d-flex justify-content-end mr-3">
-              <a class="btn btn-primary btn-primary-blog" href="">SABER MÁS</a>
+              <a class="btn btn-primary btn-primary-blog" href="./assets/pdf/Felicidad/Lo que Covid nos deja de Herencia.pdf" target="_blank">SABER MÁS</a>
             </div>
           </div>
           <div class="col-12 col-lg-6 pb-5">
@@ -883,7 +879,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-end mr-3">
-              <a class="btn btn-primary btn-primary-blog" href="">SABER MÁS</a>
+              <a class="btn btn-primary btn-primary-blog" href="./assets/pdf/Felicidad/Observa con el corazón.pdf" target="_blank">SABER MÁS</a>
             </div>
           </div>
         </div>
@@ -907,7 +903,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <a class="btn btn-primary btn-primary-blog" href="">SABER MÁS</a>
+              <a class="btn btn-primary btn-primary-blog" href="./assets/pdf/Relación de pareja/La importancia de los tiempos y ls ritmos en la pareja.pdf" target="_blank">SABER MÁS</a>
             </div>
           </div>
           <!--<div class="col-lg-1"></div>-->
@@ -920,7 +916,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <a class="btn btn-primary btn-primary-blog" href="">SABER MÁS</a>
+              <a class="btn btn-primary btn-primary-blog" href="./assets/pdf/Crianza/¿qué hacer para que las tareas no sean una pesadilla.pdf" target="_blank">SABER MÁS</a>
             </div>
           </div>
           <!-- <div class="col-lg-1"></div>-->
@@ -933,7 +929,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <a class="btn btn-primary btn-primary-blog" href="">SABER MÁS</a>
+              <a class="btn btn-primary btn-primary-blog" href="./assets/pdf/Desarrollo Personal/Llave para cambiar al mundo.pdf" target="_blank">SABER MÁS</a>
             </div>
           </div>
           <div class="col-6 col-lg-3 pb-4 card-col card-blog-left">
@@ -945,7 +941,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <a class="btn btn-primary btn-primary-blog" href="">SABER MÁS</a>
+              <a class="btn btn-primary btn-primary-blog" href="./assets/pdf/Felicidad/VivirFeliz es una Desición.pdf" target="_blank">SABER MÁS</a>
             </div>
           </div>
           <div class="col-6 col-lg-3 pb-4 card-col card-blog-right">
@@ -957,19 +953,19 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <a class="btn btn-primary btn-primary-blog" href="">SABER MÁS</a>
+              <a class="btn btn-primary btn-primary-blog" href="./assets/pdf/Relación de pareja/¿Como atraer al amor de tu vida.pdf" target="_blank">SABER MÁS</a>
             </div>
           </div>
           <div class="col-6 col-lg-3 pb-4 card-col card-blog-left">
             <div class="d-lg-flex flex-column body-card-blog">
               <div><img class="card-img-top img-fluid" src="./assets/Images/imgHomeCard-6.svg" alt=""></div>
               <div class="pt-2 pb-4 pb-lg-5 px-lg-4 mb-lg-4 mt-lg-3 text-center text-lg-left card-title-container">
-                <div class="title-body-card">¿Cómo atraer el amor de tu vida?</div>
+                <div class="title-body-card">Un adiós a la vida</div>
                 <!--<div class="contain-body-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, </div>-->
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <a class="btn btn-primary btn-primary-blog" href="">SABER MÁS</a>
+              <a class="btn btn-primary btn-primary-blog" href="./assets/pdf/Bullying/Un adiós a la vida.pdf" target="_blank">SABER MÁS</a>
             </div>
           </div>
         </div>
