adding video autoplay

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="shortcut icon" href="./assets/Images/Cristina.svg">
   <title>Cristina</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-mov fixed-top mb-2 pb-2">
     <div class="container-fluid">
-      <a href="" id="principal-button"> <img class="navbar-brand cris-logo" src="./assets/Images/Cristina.svg"
+      <a href="#" id="principal-button"> <img class="navbar-brand cris-logo" src="./assets/Images/Cristina.svg"
           alt="Icono Cristina">
       </a>
       <button id="prueba" class="navbar-toggler burger-icon" type="button" data-toggle="collapse"
@@ -167,7 +168,7 @@
       <div class="row">
         <div class="col-12 pl-0 pr-0 mb-5 col-lg-7 pr-lg-0 pl-lg-5 pt-lg-4">
           <div class="embed-responsive embed-responsive-16by9">
-            <video controls controlsList="nodownload" class="embed-responsive-item"
+            <video id="principal-video" autoplay controls controlsList="nodownload" class="embed-responsive-item"
               src="./assets/Video/VIDEO 17 PRUEBA SIN MUSICA.mp4"></video>
           </div>
           <!--</div>
@@ -754,7 +755,7 @@
         </div>
         <div class="col-12 px-0 pb-3 d-lg-flex justify-content-center">
           <div class="embed-responsive embed-responsive-16by9 col-lg-9 pt-lg-5 mt-lg-5">
-            <video controls controlsList="nodownload" class="embed-responsive-item"
+            <video id="course-video" controls controlsList="nodownload" class="embed-responsive-item"
               src="./assets/Video/SEGUNDO CORTE VIDEO 18.mp4"></video>
           </div>
         </div>
@@ -1447,7 +1448,7 @@
   </section>
 
 
-  <div class="wa-icon"><a href="https://wa.me/525514753238" target="_blank"><img src="./assets/Images/WhatsApp.svg"
+  <div class="wa-icon"><a href="https://wa.me/525514753238" target="_blank"><img src="./assets/Images/WAIcon.svg"
         alt=""></a></div>
 
   <footer class="page-footer footer-style py-3 px-2 px-lg-4">
