--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
       <div class="row">
         <div class="col-12 pl-0 pr-0 mb-5 col-lg-7 pr-lg-0 pl-lg-5 pt-lg-4">
           <div class="embed-responsive embed-responsive-16by9">
-            <video id="principal-video" autoplay controls controlsList="nodownload" class="embed-responsive-item"
+            <!--<video id="principal-video" autoplay controls controlsList="nodownload" class="embed-responsive-item"-->
+              <video id="principal-video" controls controlsList="nodownload" class="embed-responsive-item"
               src="./assets/Video/VIDEO 17 PRUEBA SIN MUSICA.mp4"></video>
           </div>
           <!--</div>
