adding image to video

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="col-12 pl-0 pr-0 mb-5 col-lg-7 pr-lg-0 pl-lg-5 pt-lg-4">
           <div class="embed-responsive embed-responsive-16by9">
             <!--<video id="principal-video" autoplay controls controlsList="nodownload" class="embed-responsive-item"-->
-              <video id="principal-video" controls controlsList="nodownload" class="embed-responsive-item"
+              <video id="principal-video" playsinline controls controlsList="nodownload" poster="./assets/Images/poster1.jpg" class="embed-responsive-item"
               src="./assets/Video/VIDEO 17 PRUEBA SIN MUSICA.mp4"></video>
           </div>
           <!--</div>
@@ -755,8 +755,8 @@
           <h2>Cursos</h2>
         </div>
         <div class="col-12 px-0 pb-3 d-lg-flex justify-content-center">
-          <div class="embed-responsive embed-responsive-16by9 col-lg-9 pt-lg-5 mt-lg-5">
-            <video id="course-video" controls controlsList="nodownload" class="embed-responsive-item"
+          <div class="embed-responsive embed-responsive-16by9 col-lg-9 container-video-course">
+            <video id="course-video" playsinline controls controlsList="nodownload" poster="./assets/Images/poster2.jpg" class="embed-responsive-item"
               src="./assets/Video/SEGUNDO CORTE VIDEO 18.mp4"></video>
           </div>
         </div>
