--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-12 pt-4 pb-4 ml-lg-5 mb-lg-0 pt-lg-5 cris-title">
+        <div class="col-12 pt-4 pb-4 mb-lg-0 pt-lg-5 cris-title">
           <h2>Cristina Jáuregui</h2>
         </div>
         <div class="col-12 col-lg-8 col-lg-6 d-flex justify-content-between justify-content-lg-end pb-4">
