--- a/index.html
+++ b/index.html
@@ -186,9 +186,7 @@
       <div class="row pr-2 pl-2 pl-lg-5 pr-lg-4">
         <div class="prizes col-12 pb-4 pl-lg-0 col-lg-5">
           <ul class="prizes-list list-group pl-lg-5 py-3 mr-lg-4">
-            <div class="prizes-wrapper py-lg-5 my-lg-5">
-
-              <h2>Premios</h2>
+              <li class="pt-lg-5 mt-lg-5 prize-title">Premios</li>
               <li class="prizes-items list-items">
                 Mujer del año 2011.
               </li>
@@ -198,10 +196,10 @@
               <li class="prizes-items list-items">
                 Teacher Director “Magnified Healing”.
               </li>
-              <li class="prizes-items list-items">
+              <li class="pb-lg-5 mb-lg-5 prizes-items list-items">
                 Certificación ADEHUM.
               </li>
-            </div>
+            
           </ul>
 
         </div>
