adding role option to carousel

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="2" class="people-dot-three"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active carousel-exp w-100 mb-1">
+              <div class="carousel-item active carousel-exp w-100 mb-1" role="option">
                 <div class="carousel-wrapper pt-lg-5 mt-lg-5">
                   <div class="pt-4 pb-2 text-center d-lg-none">
                     <img data-src="./assets/Images/laura-test.svg" class="lazyload img-fluid" alt="Responsive image" />
@@ -232,7 +232,7 @@
                   </div>
                 </div>
               </div>
-              <div class="carousel-item carousel-exp w-100 mb-1">
+              <div class="carousel-item carousel-exp w-100 mb-1" role="option">
                 <div class="carousel-wrapper pt-lg-5 mt-lg-5">
                   <div class="pt-4 pb-2 text-center d-lg-none">
                     <img src="./assets/Images/carmen-test.svg" class="img-fluid" alt="Responsive image" />
@@ -253,7 +253,7 @@
                   </div>
                 </div>
               </div>
-              <div class="carousel-item carousel-exp w-100 mb-1">
+              <div class="carousel-item carousel-exp w-100 mb-1" role="option">
                 <div class="carousel-wrapper pt-lg-5 mt-lg-5">
                   <div class="pt-4 pb-2 text-center d-lg-none">
                     <img src="./assets/Images/claudia-test.svg" class="img-fluid" alt="Responsive image" />
@@ -333,7 +333,7 @@
             <div id="carousel-clients" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner" role="listbox">
 
-                <div class="carousel-item active">
+                <div class="carousel-item active" role="option">
                   <div class=" d-flex flex-wrap justify-content-around align-content-around">
                     <div class="row pb-2">
                       <img class="lazyload col-4 img-flex hg" data-src="./assets/Images/NeuronaDigital_logo 1.svg" alt="">
@@ -358,7 +358,7 @@
                   </div>
 
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" role="option">
                   <div class=" d-flex flex-wrap justify-content-around align-content-around">
                     <div class="row pb-2">
                       <img class="lazyload col-4 img-flex hg" data-src="./assets/Images/colegio-williams_logo 1.svg" alt="">
@@ -496,13 +496,13 @@
               <li data-target="#carousel-conf" data-slide-to="2" class="cristina-dot"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active  w-100">
+              <div class="carousel-item active  w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgConf-1.svg" alt="">
               </div>
-              <div class="carousel-item w-100">
+              <div class="carousel-item w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgConf-2.svg" alt="">
               </div>
-              <div class="carousel-item w-100">
+              <div class="carousel-item w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgConf-3.svg" alt="">
               </div>
             </div>
@@ -557,13 +557,13 @@
               <li data-target="#carousel-tall" data-slide-to="2" class="cristina-dot"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active  w-100">
+              <div class="carousel-item active  w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgTall1.svg" alt="">
               </div>
-              <div class="carousel-item w-100">
+              <div class="carousel-item w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgTall2.svg" alt="">
               </div>
-              <div class="carousel-item w-100">
+              <div class="carousel-item w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgTall3.svg" alt="">
               </div>
             </div>
@@ -619,13 +619,13 @@
               <li data-target="#carousel-ter" data-slide-to="2" class="cristina-dot"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active  w-100">
+              <div class="carousel-item active  w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgTer-1.svg" alt="">
               </div>
-              <div class="carousel-item w-100">
+              <div class="carousel-item w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgTer-2.svg" alt="">
               </div>
-              <div class="carousel-item w-100">
+              <div class="carousel-item w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgTer-3.svg" alt="">
               </div>
             </div>
@@ -703,13 +703,13 @@
               <li data-target="#carousel-tv" data-slide-to="2" class="cristina-dot"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active  w-100">
+              <div class="carousel-item active  w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgTv-1.svg" alt="">
               </div>
-              <div class="carousel-item w-100">
+              <div class="carousel-item w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgTv-2.svg" alt="">
               </div>
-              <div class="carousel-item w-100">
+              <div class="carousel-item w-100" role="option">
                 <img class="lazyload img-fluid" data-src="./assets/Images/imgTv-3.svg" alt="">
               </div>
             </div>
